# Seal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: Syntax.md  Virtual Machine.md
include/: clib_mem.h  seal.h  sl_array.h  sl_builtin.h  sl_codegen.h  sl_exec.h  sl_hashmap.h  sl_lexer.h  sl_mem.h  sl_object.h  sl_parser.h  sl_vartable.h  sl_vm.h
src/: clib_mem.c  sl_array.c  sl_builtin.c  sl_codegen.c  sl_exec.c  sl_hashmap.c  sl_lexer.c  sl_mem.c  sl_object.c  sl_parser.c  sl_vartable.c  sl_vm.c
test/: main.c  script.sl
